--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
             <p class="section-text">
               Lorem Ipsum is simply dummy text of the printingand typesetting industry lorem Ipsum has been the
-              industrys standard dummy text ever since the when an unknown harsh khyati printer took a galley of type and scrambled
+              industrys standard dummy text ever since the when an unknown harsh  printer took a galley of type and scrambled
               it to make a type specimen book It has survived not only five centuries, but also the leap into.
             </p>
 
@@ -501,7 +501,7 @@
             <h2 class="headline-1 section-title">Chhole Bhature</h2>
 
             <p class="section-text">
-              Chole bhature (Hindi: छोले भटूरे) is a food dish popular in the Northern areas of the Indian subcontinent. It is a combination of chana masala (spicy white chickpeas) and bhatura/puri, a deep-fried bread made from maida. Chole bhature is often eaten as a breakfast dish, sometimes accompanied with lassi.This is khyati's husband favourite dish.  
+              Chole bhature (Hindi: छोले भटूरे) is a food dish popular in the Northern areas of the Indian subcontinent. It is a combination of chana masala (spicy white chickpeas) and bhatura/puri, a deep-fried bread made from maida. Chole bhature is often eaten as a breakfast dish, sometimes accompanied with lassi.This is my favourite dish.  
             </p>
 
             <div class="wrapper">
