--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
             <p class="section-text">
               Lorem Ipsum is simply dummy text of the printingand typesetting industry lorem Ipsum has been the
-              industrys standard dummy text ever since the when an unknown harsh  printer took a galley of type and scrambled
+              industrys standard dummy text ever since the when an unknown  printer took a galley of type and scrambled
               it to make a type specimen book It has survived not only five centuries, but also the leap into.
             </p>
 
